--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=Laravel Starter
 APP_ENV=local
 APP_KEY=base64:ZQsXh9SoaIQUC4zeQYuz7IQ5Ag49qOiV/alraGuzVJc=
 APP_DEBUG=true
