--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-APP_NAME=Laravel Starter
+APP_NAME="Laravel Starter"
+
 APP_ENV=local
 APP_KEY=base64:ZQsXh9SoaIQUC4zeQYuz7IQ5Ag49qOiV/alraGuzVJc=
 APP_DEBUG=true
@@ -24,7 +25,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=starter
+DB_DATABASE=school_managment
 DB_USERNAME=root
 DB_PASSWORD=
 
